--- CHANGELOG ---
--- PyFMI-2.9.3 ---
    * Added an internal class variable in ResultHandlerFile to keep track of file position where the data header ends.

--- PyFMI-2.9.2 ---
    * Made error check with 'dynamic_diagnostics' less restrictive to also allow custom result handlers. In 2.9.1 only a binary result handler was allowed.

--- PyFMI-2.9.1 ---
    * Added new simulation option 'dynamic_diagnostics' to better illustrate the purpose of enabling 'logging' when 'result_handling' is set to True.
    * Updated also such that the text file 'model identifier + _debug.txt' is no longer generated when logging to the binary result file.

--- PyFMI-2.9 ---
    * Saving diagnostic data in binary result file instead of log file.
    * Attempts to get continuous states when there are no such states will now return fmi2_status_ok instead of an error.

--- PyFMI-2.8.10 ---
    * Minor updates to exception messages.

--- PyFMI-2.8.9 ---
    * Reverted a fix added in 2.8.8 intended to make sure a log file was not created if no log messages due to potential issues with the implementation.

--- PyFMI-2.8.8 ---
    * Added support for writing result data to streams.
    * Fixed bug with on demand loading with data stored as 32 bit.
    * Fixed segfault when storing data from models with a huge number of
      variables.
    * Loading of FMUs can now be done from an unzipped folder if the argument 'allow_unzipped_fmu' is set to True.
    * The argument 'path' to load_fmu and the different FMI-classes is now deprecated.
    * Added support to log to streams via the keyword argument log_file_name. This is supported for all the FMI-classes as well as the function load_fmu.
    * Improved performance of the Master algorithm.
    * Updated exception types when loading an FMU fails.
    * Delayed creating of a log file. I.e. if there is no log messages
      a log file will not be created.

--- PyFMI-2.8.7 ---
    * Added safety check for updated binary files which can cause